force-app/main/default/objects/WAC_Parse_Addr_Split__c/WAC_Parse_Addr_Split__c.object-meta.xml
<CustomObject>
    <label>WAC Parse Addr Split</label>
    <nameField>
        <displayFormat>WRS{0000000000}</displayFormat>
        <label>NAME (Report Detail Seq)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WAC Parse Addr Split</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>