force-app/main/default/objects/WAC_Parse_Addr_Split__c/fields/FIRST_MIDDLE_NAME__c.field-meta.xml
<CustomField>
    <fullName>FIRST_MIDDLE_NAME__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>FIRST MIDDLE NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>