force-app/main/default/objects/WAC_Parse_Addr_Split__c/fields/LAST_NAME__c.field-meta.xml
<CustomField>
    <fullName>LAST_NAME__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>LAST NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>