force-app/main/default/objects/WAC_Parse_Addr_Split__c/fields/M_ADDRESS3__c.field-meta.xml
<CustomField>
    <fullName>M_ADDRESS3__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>M ADDRESS3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>