force-app/main/default/objects/WAC_Parse_Addr_Split__c/fields/RPT_NO__c.field-meta.xml
<CustomField>
    <fullName>RPT_NO__c</fullName>
    <label>RPT NO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>