force-app/main/default/objects/WAC_Parse_Addr_Split__c/fields/S_ADDRESS1__c.field-meta.xml
<CustomField>
    <fullName>S_ADDRESS1__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>S ADDRESS1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>